Fixed overflow problem

--- a/src/app/admin-page/companies/company-list/company-list.component.scss
+++ b/src/app/admin-page/companies/company-list/company-list.component.scss
@@ -4,6 +4,8 @@
     overflow: auto;
     border-radius: 14px;
     color: #120F3F;
+    max-height: 520px;
+    overflow: auto;
 }
 
 .add-button {
